<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.MainActivity">

    <LinearLayout
        android:id="@+id/not_logged"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="163dp"
                android:layout_height="150dp"
                android:layout_above="@+id/editText2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="72dp"
                android:layout_marginBottom="61dp"
                android:contentDescription="@string/picture_description"
                app:srcCompat="@drawable/book_img" />

            <TextView
                android:id="@+id/loginMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editText2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="82dp"
                android:text="@string/login_welcome"
                android:textColor="#000"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="364dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="20sp"
                tools:targetApi="o" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="293dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                tools:targetApi="o" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="193dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="114dp"
                android:text="@string/sign_up" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="163dp"
                android:layout_height="150dp"
                android:layout_above="@id/username"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="72dp"
                android:layout_marginBottom="258dp"
                android:contentDescription="@string/picture_description"
                app:srcCompat="@drawable/book_img" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="261dp"
                android:text="@string/username"
                android:textSize="60dp"/>

            <TextView
                android:id="@+id/success_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="400dp"
                android:text="@string/login_successful"
                android:textColor="#000"
                android:textSize="40sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="480dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/welcome_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_message"
                    android:textColor="#000"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/username_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="135dp"
                    android:text="@string/username"
                    android:textColor="#000"
                    android:textSize="30sp" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>