<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="175dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/container_bg"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/item_book_img"
        android:layout_width="100dp"
        android:layout_height="145dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="TODO"
        android:scaleType = "fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/amphibian_belyaev" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/item_book_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_Amphibian"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/item_book_author_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/author_AlexBel"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_title_txt" />

    <RatingBar
        android:id="@+id/item_book_ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toEndOf="@+id/item_book_score_txt"
        app:layout_constraintTop_toBottomOf="@+id/item_book_author_txt" />

    <TextView
        android:id="@+id/item_book_score_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/book_rating"
        app:layout_constraintBottom_toBottomOf="@+id/item_book_ratingBar"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_author_txt"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/item_book_category_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:text="Category"
        app:layout_constraintBottom_toTopOf="@+id/item_book_isbn_txt"
        app:layout_constraintStart_toEndOf="@+id/item_book_img"
        app:layout_constraintTop_toBottomOf="@+id/item_book_author_txt"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/item_book_isbn_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="6dp"
        android:text="ISBN"
        app:layout_constraintBottom_toTopOf="@+id/item_book_score_txt"
        app:layout_constraintStart_toEndOf="@+id/item_book_img" />

</androidx.constraintlayout.widget.ConstraintLayout>